tests/negative/test_lenof_undef.orb
data Foo;

fnc main () () {
    lenOf Foo;
};